@startuml

title __MODEL's Class Diagram__\n

  namespace com.company {
    namespace model {
      class com.company.model.Pojazd {
          # kategoriaPrawaJazdy : String
          # liczbaMiejsc : int
          # typ : String
          + Pojazd()
          + getKategoriaPrawaJazdy()
          + getLiczbaMiejsc()
          + getTyp()
          + setKategoriaPrawaJazdy()
          + setLiczbaMiejsc()
          + setTyp()
          + toString()
      }
    }
  }
  

  namespace com.company {
    namespace model {
      class com.company.model.Samochod {
          - iloscKoniMechanicznych : int
          - pojemnoscBagaznika : int
          - rodzajPaliwa : String
          + getIloscKoniMechanicznych()
          + getPojemnoscBagaznika()
          + getRodzajPaliwa()
          + setDefault()
          + setIloscKoniMechanicznych()
          + setPojemnoscBagaznika()
          + setRodzajPaliwa()
          + toString()
      }
    }
  }
  

  namespace com.company {
    namespace model {
      class com.company.model.Tramwaj {
          - czyMiejscaDlaNiepelnosprawnych : boolean
          - czyNiskopodlogowy : boolean
          - szerokoscOsi : int
          + getSzerokoscOsi()
          + isCzyMiejscaDlaNiepelnosprawnych()
          + isCzyNiskopodlogowy()
          + setCzyMiejscaDlaNiepelnosprawnych()
          + setCzyNiskopodlogowy()
          + setSzerokoscOsi()
          + toString()
      }
    }
  }
  

  com.company.model.Pojazd .up.|> java.io.Serializable
  com.company.model.Samochod -up-|> com.company.model.Pojazd
  com.company.model.Tramwaj -up-|> com.company.model.Pojazd


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
